# mlops_source

./: .gitignore
async_mode/: README.md  kafka_consumer.py  kafka_producer.py  pyproject.toml
async_mode/env_kafka/: pyvenv.cfg
cloud_practice/: README.md
cloud_practice/dataproc/: inference_dummy_model.ipynb  model.cbm  train_dummy_model.ipynb
feast/: example.ipynb  pyproject.toml
feast/feature_store/feature_repo/: example_repo.py  feature_store.yaml
feast/feature_store/feature_repo/data/: driver_stats.parquet
